--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ss-deno-be",
-  "version": "1.0.1",
+  "name": "contest-be",
+  "version": "2.0.0",
   "main": "index.js",
   "repository": "https://github.com/story-squad/contest-deno-be.git",
   "author": "Brandon Ramirez <bran.ramirez.don@gmail.com>",
@@ -32,17 +32,19 @@
     "make:ds": "yarn cross-env NODE_ENV=ds knex migrate:make",
     "makeseed": "yarn knex seed:make",
     "makeseed:ds": "yarn cross-env NODE_ENV=ds knex seed:make",
-    "lint:check": "npx eslint .",
-    "build": "docker build -t storysquadllc/deno-be .",
-    "deploy": "yarn build && docker push storysquadllc/deno-be:latest"
+    "lint:check": "npx eslint ."
   },
   "dependencies": {
+    "aws-sdk": "^2.936.0",
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "knex": "^0.21.15",
     "knex-cleaner": "^1.3.1",
-    "moment": "^2.29.1",
+    "luxon": "^1.27.0",
     "pg": "^8.5.1",
-    "typescript": "^4.1.5"
+    "typescript": "^4.1.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.15.1",
