--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Brandon Ramirez <bran.ramirez.don@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "start": "nodemon src/index.ts",
     "up": "docker-compose -f docker/docker-compose.yml up -d",
     "latest": "yarn knex migrate:latest",
     "latest:test": "yarn cross-env NODE_ENV=testing knex migrate:latest",
@@ -35,24 +36,38 @@
     "lint:check": "npx eslint ."
   },
   "dependencies": {
+    "@types/luxon": "^1.27.0",
     "aws-sdk": "^2.936.0",
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.15",
     "knex-cleaner": "^1.3.1",
     "luxon": "^1.27.0",
+    "multiparty": "^4.2.2",
     "pg": "^8.5.1",
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.0.0",
+    "typedi": "^0.10.0",
     "typescript": "^4.1.5",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.12",
+    "@types/jsonwebtoken": "^8.5.2",
+    "@types/multiparty": "^0.0.32",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "cross-env": "^7.0.3",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "nodemon": "^2.0.8",
     "prettier": "2.2.1"
   }
 }
