Tons of interface changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,7 @@
     "source.fixAll.eslint": true,
     "source.organizeImports": true
   },
-  "files.exclude": {}
+  "files.exclude": {
+    "node_modules": true
+  }
 }
