--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "aws-sdk": "^2.936.0",
     "axios": "^0.21.1",
     "bluebird": "^3.7.2",
+    "celebrate": "^14.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
