--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/luxon": "^1.27.0",
     "aws-sdk": "^2.936.0",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "bluebird": "^3.7.2",
     "celebrate": "^14.0.0",
     "cors": "^2.8.5",
@@ -58,6 +59,7 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/bluebird": "^3.5.35",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
