--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.15",
     "knex-cleaner": "^1.3.1",
@@ -63,6 +64,7 @@
     "@types/bluebird": "^3.5.35",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
+    "@types/handlebars": "^4.1.0",
     "@types/jsonwebtoken": "^8.5.2",
     "@types/multiparty": "^0.0.32",
     "@types/uuid": "^8.3.0",
