--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "lint:check": "npx eslint ."
   },
   "dependencies": {
-    "@types/luxon": "^1.27.0",
-    "aws-sdk": "^2.936.0",
+    "aws-sdk": "^2.938.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "bluebird": "^3.7.2",
@@ -45,13 +44,17 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.3.2",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.15",
     "knex-cleaner": "^1.3.1",
     "luxon": "^1.27.0",
     "multiparty": "^4.2.2",
+    "nodemailer": "^6.0.0",
+    "nodemailer-express-handlebars": "^4.0.0",
     "pg": "^8.5.1",
+    "punycode": "^2.1.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.0.0",
     "typedi": "^0.10.0",
@@ -60,13 +63,19 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/bluebird": "^3.5.35",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
+    "@types/express-handlebars": "^5.3.0",
     "@types/handlebars": "^4.1.0",
     "@types/jsonwebtoken": "^8.5.2",
+    "@types/luxon": "^1.27.0",
     "@types/multiparty": "^0.0.32",
+    "@types/nodemailer": "^6.4.2",
+    "@types/nodemailer-express-handlebars": "^4.0.0",
+    "@types/punycode": "^2.1.0",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
