--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lint:check": "npx eslint ."
   },
   "dependencies": {
+    "@types/file-type": "^10.9.1",
     "aws-sdk": "^2.938.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
@@ -45,6 +46,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
+    "file-type": "^16.5.0",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.15",
