--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.0.0",
     "typedi": "^0.10.0",
-    "typescript": "^4.1.5",
+    "typescript": "^4.4.0-beta",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
