--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/luxon": "^1.27.0",
     "@types/multiparty": "^0.0.32",
     "@types/nodemailer": "^6.4.2",
+    "@types/pg": "^8.6.0",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
