--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "lint:check": "npx eslint ."
   },
   "dependencies": {
-    "@types/file-type": "^10.9.1",
-    "aws-sdk": "^2.938.0",
+    "aws-sdk": "^2.930.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "bluebird": "^3.7.2",
@@ -54,6 +53,7 @@
     "luxon": "^1.27.0",
     "multiparty": "^4.2.2",
     "nodemailer": "^6.0.0",
+    "nodemailer-express-handlebars": "^4.0.0",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.0.0",
@@ -69,11 +69,13 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@types/express-handlebars": "^5.3.0",
+    "@types/file-type": "^10.9.1",
     "@types/handlebars": "^4.1.0",
     "@types/jsonwebtoken": "^8.5.2",
     "@types/luxon": "^1.27.0",
     "@types/multiparty": "^0.0.32",
     "@types/nodemailer": "^6.4.2",
+    "@types/nodemailer-express-handlebars": "^4.0.0",
     "@types/pg": "^8.6.0",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
