--- a/package.json
+++ b/package.json
@@ -86,5 +86,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "nodemon": "^2.0.8",
     "prettier": "2.2.1"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
