--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "repository": "https://github.com/story-squad/contest-deno-be.git",
   "author": "Brandon Ramirez <bran.ramirez.don@gmail.com>",
   "license": "MIT",
-  "type": "module",
   "scripts": {
     "start": "ts-node src/index.ts",
+    "build": "tsc",
+    "heroku-postbuild": "npm run build",
     "dev": "nodemon src/index.ts",
     "up": "docker-compose -f docker/docker-compose.yml up -d",
     "latest": "yarn knex migrate:latest",
