--- a/package.json
+++ b/package.json
@@ -39,33 +39,6 @@
     "lint:check": "npx eslint ."
   },
   "dependencies": {
-    "aws-sdk": "^2.930.0",
-    "axios": "^0.21.1",
-    "bcrypt": "^5.0.1",
-    "bluebird": "^3.7.2",
-    "celebrate": "^14.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-handlebars": "^5.3.2",
-    "file-type": "^16.5.0",
-    "handlebars": "^4.7.7",
-    "jsonwebtoken": "^8.5.1",
-    "knex": "^0.21.15",
-    "knex-cleaner": "^1.3.1",
-    "luxon": "^1.27.0",
-    "multiparty": "^4.2.2",
-    "nodemailer": "^6.0.0",
-    "nodemailer-express-handlebars": "^4.0.0",
-    "pg": "^8.5.1",
-    "reflect-metadata": "^0.1.13",
-    "ts-node": "^10.0.0",
-    "typedi": "^0.10.0",
-    "typescript": "^4.4.0-beta",
-    "uuid": "^8.3.2",
-    "winston": "^3.3.3"
-  },
-  "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/bluebird": "^3.5.35",
@@ -83,12 +56,39 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
+    "aws-sdk": "^2.930.0",
+    "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
+    "bluebird": "^3.7.2",
+    "celebrate": "^14.0.0",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "dotenv": "^8.2.0",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "nodemon": "^2.0.8",
-    "prettier": "2.2.1"
+    "express": "^4.17.1",
+    "express-handlebars": "^5.3.2",
+    "file-type": "^16.5.0",
+    "handlebars": "^4.7.7",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.21.15",
+    "knex-cleaner": "^1.3.1",
+    "luxon": "^1.27.0",
+    "multiparty": "^4.2.2",
+    "nodemailer": "^6.0.0",
+    "nodemailer-express-handlebars": "^4.0.0",
+    "pg": "^8.5.1",
+    "prettier": "2.2.1",
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.0.0",
+    "typedi": "^0.10.0",
+    "typescript": "^4.4.0-beta",
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.8"
   },
   "engines": {
     "node": "14.x"
