Added absolute imports to project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,17 @@
     "allowJs": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "downlevelIteration": true
+    "downlevelIteration": true,
+    "paths": {
+      "@api": ["./src/api"],
+      "@config": ["./src/config"],
+      "@db": ["./src/db"],
+      "@interfaces": ["./src/interfaces"],
+      "@loaders": ["./src/loaders"],
+      "@models": ["./src/models"],
+      "@services": ["./src/services"],
+      "@subscribers": ["./src/subscribers"],
+      "@utils": ["./src/utils"]
+    }
   }
 }
