--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/handlebars": "^4.1.0",
     "@types/jsonwebtoken": "^8.5.2",
     "@types/luxon": "^1.27.0",
+    "@types/module-alias": "^2.0.1",
     "@types/multiparty": "^0.0.32",
     "@types/nodemailer": "^6.4.2",
     "@types/nodemailer-express-handlebars": "^4.0.0",
@@ -75,6 +76,7 @@
     "knex": "^0.21.15",
     "knex-cleaner": "^1.3.1",
     "luxon": "^1.27.0",
+    "module-alias": "^2.2.2",
     "multiparty": "^4.2.2",
     "nodemailer": "^6.0.0",
     "nodemailer-express-handlebars": "^4.0.0",
@@ -90,5 +92,16 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.8"
+  },
+  "_moduleAliases": {
+    "@api": "./src/api",
+    "@config": "./src/config",
+    "@db": "./src/db",
+    "@interfaces": "./src/interfaces",
+    "@loaders": "./src/loaders",
+    "@models": "./src/models",
+    "@services": "./src/services",
+    "@subscribers": "./src/subscribers",
+    "@utils": "./src/utils"
   }
 }
